SmartBear task is completed

--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,7 @@
 browser = chrome
+
+#SmartBear
+smart_bear_env=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
+smart_bear_username=Tester
+smart_bear_password=test
+
