Webtable app login task is completed

--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,7 @@ smart_bear_env=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrd
 smart_bear_username=Tester
 smart_bear_password=test
 
+#Webtable app
+webtable_env=https://web-table-2.cydeo.com/login
+
+
