Webtable App Order feature test is completed successfully

--- a/config.properties
+++ b/config.properties
@@ -7,5 +7,7 @@ smart_bear_password=test
 
 #Webtable app
 webtable_env=https://web-table-2.cydeo.com/login
+webtable_username=Test
+webtable_password=Tester
 
 
